# kv_store

./: .gitignore  CMakeLists.txt  README.md
data/: data.txt
include/kv_store/: cli_interface.h  file_storage.h  kv_store_engine.h
src/: CMakeLists.txt  cli_interface.cc  file_storage.cc  kv_store_engine.cc  main.cc  main.cpp
tests/: CMakeLists.txt  file_storage_test.cc  kv_store_engine_test.cc
